Add benchmark models with numerical and also url attributes

--- a/deskriptivna_explorativna_analyza.ipynb
+++ b/deskriptivna_explorativna_analyza.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5166,7 +5166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5185,7 +5185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5201,7 +5201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5210,7 +5210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5226,7 +5226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5242,7 +5242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5252,7 +5252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5268,7 +5268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5315,12 +5315,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TF-IDF"
+    "### TF-IDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5349,12 +5349,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Atribut URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['url_new'] = df['url'].apply(lambda x: re.sub('[^a-zA-Z]', ' ', str(x)))\n",
+    "df['url_new'] = df['url_new'].apply(lambda x: str(x).lower().split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['url_new'] = df['url_new'].apply(lambda x: [porter_stemmer.stem(word) for word in x if word not in stopwords])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['url_final'] = df['url_new'].apply(lambda x: ' '.join(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv_url = TfidfVectorizer(max_features = 1000)\n",
+    "tf_idf_url = tv_url.fit_transform(df['url_final']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Vytvaranie modelov"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5407,7 +5452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5864,7 +5909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5874,7 +5919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5886,7 +5931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5896,7 +5941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5906,7 +5951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5915,7 +5960,7 @@
        "0.7971602434077079"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6624,7 +6669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6632,8 +6677,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numericke atributy a text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6642,7 +6694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6651,10 +6703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.concat([df1, pd.DataFrame(tf_idf_1000)], axis=1, join_axes=[df1.index])"
@@ -6662,7 +6712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6670,15 +6720,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### RandomForest"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6688,7 +6731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6698,7 +6741,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[653,  77],\n",
+       "       [220, 529]], dtype=int64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -6707,7 +6771,7 @@
        "0.7991886409736308"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6720,83 +6784,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### XGBoost"
+    "#### URLky a text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xgboost as xgb"
+    "df1 = pd.DataFrame(tf_idf_1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "X = pd.concat([df1, pd.DataFrame(tf_idf_url)], axis=1, join_axes=[df1.index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgbc = xgb.XGBClassifier(max_depth = 10, min_child_weight=2, random_state=0)"
+    "X_train, X_test, y_train, y_test = ms.train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_clf = RandomForestClassifier(n_estimators=1000, max_depth=20,\n",
+    "                              random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_clf.fit(X_train, y_train)\n",
+    "y_pred = benchmark_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
-       "       max_depth=10, min_child_weight=2, missing=None, n_estimators=100,\n",
-       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
-       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
-       "       silent=True, subsample=1)"
+       "array([[657,  73],\n",
+       "       [217, 532]], dtype=int64)"
       ]
      },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xgbc.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Peter\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = xgbc.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[629, 101],\n",
-       "       [191, 558]], dtype=int64)"
-      ]
-     },
-     "execution_count": 230,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6807,16 +6859,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8025693035835023"
+       "0.803921568627451"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
