Add Further testing in Overenie nezavislosti - url dependency

--- a/deskriptivna_explorativna_analyza.ipynb
+++ b/deskriptivna_explorativna_analyza.ipynb
@@ -5354,7 +5354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5364,7 +5364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5373,7 +5373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5382,7 +5382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6504,7 +6504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Zistovanie najmensej zavislosti"
+    "#### Zistovanie najmensej zavislosti vychadzajuc z povodneho rozdelenia atributov"
    ]
   },
   {
@@ -6656,6 +6656,167 @@
     "\n",
     "for i in range(no_of_features):\n",
     "    find_dependency(filtered_tfidf, df.loc[:,feature_set_1_1[:i] + feature_set_1_1[i+1:]],y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Zistovanie zavislosti (TF-IDF, urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_tfidf = RandomForestClassifier(n_estimators=100, max_depth=8,\n",
+    "                              random_state=10)\n",
+    "clf_urls = RandomForestClassifier(n_estimators=100, max_depth=8,\n",
+    "                              random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitovanie url modelu a zistovanie istoty predikcii:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_urls = clf_urls.fit(tf_idf_url, y)\n",
+    "class_probabilities_urls = model_numerical.predict_proba(X_numerical)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitovanie TF-IDF modelu a zistovanie istoty predikcii:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_tfidf = clf_tfidf.fit(X_tfidf, y)\n",
+    "class_probabilities_tfidf = model_tfidf.predict_proba(X_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filtrovanie predikcii s istotou >= ako threshold:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_urls = return_above_threshold(class_probabilities_urls)\n",
+    "filtered_tfidf = return_above_threshold(class_probabilities_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Vyhodnotenie**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_urls = set(filtered_urls.keys())\n",
+    "set_tfidf = set(filtered_tfidf.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pocet unikatnych riadkov (1. alebo 2. klasifikator mal u nich istotu vacsiu ako threshold):  1892\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_rows = set(set_urls).union(set_tfidf)\n",
+    "print('Pocet unikatnych riadkov (1. alebo 2. klasifikator mal u nich istotu vacsiu ako threshold): ',len(unique_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pocet zhodnych riadkov (1. a 2. klasifikator mal u nich istotu vacsiu ako threshold):  266\n"
+     ]
+    }
+   ],
+   "source": [
+    "common_rows = set_urls.intersection(set_tfidf)\n",
+    "print('Pocet zhodnych riadkov (1. a 2. klasifikator mal u nich istotu vacsiu ako threshold): ', len(common_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pocet unikatnych riadkov u url klasifikatora: 165/431 (38.28%)\n",
+      "Pocet unikatnych riadkov u textoveho klasifikatora: 1304/1727 (75.51%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_urls = set_urls.difference(common_rows)\n",
+    "unique_tfidf = set_tfidf.difference(common_rows)\n",
+    "print('Pocet unikatnych riadkov u url klasifikatora: ' + str(len(unique_urls)) +'/' + str(len(set_urls)) + ' (' + str(round(len(unique_urls)/len(set_urls)* 100,2) ) + '%)' )\n",
+    "print('Pocet unikatnych riadkov u textoveho klasifikatora: ' + str(len(unique_tfidf)) +'/' + str(len(set_tfidf)) + ' (' + str(round(len(unique_tfidf)/len(set_tfidf)*100,2)) + '%)' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentualna zhoda 14.06%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Percentualna zhoda ' + str(round(len(common_rows) / len(unique_rows) * 100,2))+ '%')"
    ]
   },
   {
