co training version2

--- a/co-training.ipynb
+++ b/co-training.ipynb
@@ -989,9 +989,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## RAZ TO MOZNO BUDE AJ FUNGOVAT\n",
-    "\n",
-    "def co_training2(L, U, col_names1, col_names2, clf1, clf2,u=75, k=30,p=1,n=3, label='label', random_state=None):\n",
+    "def co_training2(L, U, col_names1, col_names2, clf1, clf2, label='label', random_state=None, treshhold=0.8):\n",
     "    '''\n",
     "    L - labeled data\n",
     "    U - unlabeled data\n",
@@ -1006,42 +1004,34 @@
     "    label - name of column in L whit label\n",
     "    '''\n",
     "    \n",
-    "#     U0 = U.sample(u, random_state= random_state)\n",
-    "#     U.drop(U0.index, inplace=True)\n",
     "    while len(U) > 0:\n",
-    "        print(\"iteration: \", 30 - k)\n",
+    "        \n",
     "        # step 1: Use L to train a classifier h1 that considers only the x1 portion of x\n",
     "        clf1 = clf1.fit(L[col_names1],  L[label])\n",
     "        \n",
     "        # step 2: Use L, to train a classifier h2 that considers only the x2 portion of x\n",
     "        clf2 = clf2.fit(L[col_names2], L[label])\n",
     "        \n",
-    "        # step 3: Allow hl to label best p examples\n",
+    "        # step 3: Allow hl to label p positive and n negative examples from U\n",
     "        predicted_prob1 = clf1.predict_proba(U[col_names1])\n",
-    "        scores1 = [[x[0],0] if x[0] > x[1] else [x[1],1] for x in predicted_prob1]\n",
-    "        dt = np.dtype('float,int')\n",
-    "        scores1 = np.array(scores1, dtype=dt)\n",
-    "        top1 = scores1[:,0].argsort()[-p:]\n",
-    "        labels1 = scores1[top1,1]\n",
+    "        top_positive1 = predicted_prob1[:,1].argsort()[-1:] if predicted_prob1[:,1].argsort()[-1:] > treshhold else [] \n",
+    "        top_negative1 = predicted_prob1[:,0].argsort()[-1:] if predicted_prob1[:,0].argsort()[-1:] > treshhold else []\n",
     "        \n",
-    "        # step 4: Allow hl to label best p examples\n",
-    "        predicted_prob2 = clf2.predict_proba(U[col_names2])\n",
-    "        scores2 = [[x[0],0] if x[0] > x[1] else [x[1],1] for x in predicted_prob2]\n",
-    "        scores2 = np.array(scores2, dtype=dt)\n",
-    "        top2 = scores2[:,0].argsort()[-p:]\n",
-    "        labels2 = scores1[top2,1]\n",
-    "        \n",
+    "        # step 4: Allow hl to label p positive and n negative examples from U\n",
+    "        predicted_prob2 = clf2.predict_proba(U[col_names2]) \n",
+    "        top_positive2 = predicted_prob2[:,1].argsort()[-1:] if predicted_prob2[:,1].argsort()[-1:] > treshhold else []\n",
+    "        top_negative2 = predicted_prob2[:,0].argsort()[-1:] if predicted_prob2[:,0].argsort()[-1:] > treshhold else []\n",
     "        \n",
     "        # step 5: Add these self-labeled examples to L\n",
-    "        ind = U.iloc[np.concatenate((top1,top2)),:].index\n",
-    "#         negative_ind = U.iloc[np.unique(np.concatenate((top_negative1,top_negative2))),:].index\n",
-    "        self_labeled = U.loc[ind,:]\n",
+    "        if(np.unique(np.concatenate((top_positive1,top_positive2, top_negative1, top_negative2))).size == 0):\n",
+    "            print(\"ehhhh\")\n",
+    "            return [clf1,clf2]\n",
+    "        positive_ind = U.iloc[np.unique(np.concatenate((top_positive1,top_positive2))),:].index\n",
+    "        negative_ind = U.iloc[np.unique(np.concatenate((top_negative1,top_negative2))),:].index\n",
+    "        self_labeled = U.loc[np.unique(np.concatenate((positive_ind,negative_ind))),:]\n",
     "        U.drop(self_labeled.index, inplace=True)\n",
-    "        print(ind)\n",
-    "        print(labels1,labels2)\n",
-    "        print(np.concatenate(labels1,labels2))\n",
-    "        self_labeled.loc[ind, label] = np.concatenate(labels1,labels2)\n",
-    "#         self_labeled.loc[negative_ind, label] = 0\n",
+    "        self_labeled.loc[positive_ind, label] = 1\n",
+    "        self_labeled.loc[negative_ind, label] = 0\n",
     "        L = pd.concat([L, self_labeled])\n",
     "    \n",
     "        # step 6: Randomly choose 2p + 2n examples from U to replenish U_\n",
@@ -1049,7 +1039,6 @@
     "#         U.drop(new_unlabeled.index, inplace=True)\n",
     "#         U0 = U0.append(new_unlabeled)\n",
     "\n",
-    "        k -= 1\n",
     "    \n",
     "    return [clf1,clf2]"
    ]
@@ -1469,53 +1458,6 @@
    "source": [
     "print(\"combined calssifier accuracy:\" ,accuracy_score(y_test, pred))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cotraining2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 356,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration:  0\n",
-      "Int64Index([600, 752], dtype='int64')\n",
-      "[(0., 0)] [(0., 0)]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "only integer scalar arrays can be converted to a scalar index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-356-af8303fbfe23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m new_1, new_2 = co_training2(L=train,U=X_train.loc[X_train.index.drop(train.index),list(range(0,19746))], \n\u001b[1;32m      2\u001b[0m                            \u001b[0mcol_names1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m17733\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m                            col_names2=list(range(17733,19746)), clf1=clf1, clf2=clf2, k=30)\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-355-112d33c5bb26>\u001b[0m in \u001b[0;36mco_training2\u001b[0;34m(L, U, col_names1, col_names2, clf1, clf2, u, k, p, n, label, random_state)\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0mself_labeled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;31m#         self_labeled.loc[negative_ind, label] = 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
-     ]
-    }
-   ],
-   "source": [
-    "new_1, new_2 = co_training2(L=train,U=X_train.loc[X_train.index.drop(train.index),list(range(0,19746))], \n",
-    "                           col_names1=list(range(0,17733)),\n",
-    "                           col_names2=list(range(17733,19746)), clf1=clf1, clf2=clf2, k=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
